add styles for header and body elements@

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,15 @@
 {
+  "plugins": [
+    [
+      "wrap-in-js",
+      {
+        "extensions": [
+          "css$",
+          "scss$"
+        ]
+      }
+    ]
+  ],
   "presets": [
     [
       "next/babel",
@@ -10,5 +21,6 @@
         }
       }
     ]
-  ]
+  ],
+  "ignore": []
 }
