--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "next start",
+    "build": "next build",
     "dev": "next",
     "start": "next start",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -24,6 +24,7 @@
     "raw-loader": "^0.5.1",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-modal": "^3.1.6",
     "sass-loader": "^6.0.6",
     "styled-jsx-plugin-postcss": "^0.1.1"
   },
