--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "next",
     "start": "next start",
     "export": "next export",
-    "other-deploy": "rm -rf node_modules/.cache && next build && next export && touch out/.nojekyll && echo 'andricokaroulla.com' > out/CNAME",
+    "other-deploy": "rm -rf node_modules/.cache && next build && next export && touch out/.nojekyll && echo 'andri.co' > out/CNAME",
     "deploy": "rm -rf node_modules/.cache && next build && next export && touch out/.nojekyll && touch out/CNAME  && git add out/ && git commit -m \"Deploy Next.js to gh-pages\" && git subtree push --prefix out origin gh-pages"
   },
   "author": "",
