--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "babel-plugin-module-resolver": "^3.0.0",
     "babel-plugin-wrap-in-js": "^1.1.1",
+    "dotenv": "^6.1.0",
     "glob": "^7.1.2",
+    "isomorphic-fetch": "^2.2.1",
     "next": "^4.1.4",
     "node-sass": "^4.7.2",
     "normalize.css": "^7.0.0",
