--- a/package.json
+++ b/package.json
@@ -8,29 +8,26 @@
     "dev": "next",
     "start": "next start",
     "export": "next export",
-    "other-deploy": "rm -rf node_modules/.cache && next build && next export && touch out/.nojekyll && echo 'andri.co' > out/CNAME",
-    "deploy": "rm -rf node_modules/.cache && next build && next export && touch out/.nojekyll && touch out/CNAME  && git add out/ && git commit -m \"Deploy Next.js to gh-pages\" && git subtree push --prefix out origin gh-pages"
+    "deploy": "yarn export && now && now alias",
+    "now-build": "next build"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-plugin-module-resolver": "^3.0.0",
-    "babel-plugin-wrap-in-js": "^1.1.1",
     "dotenv": "^6.1.0",
     "glob": "^7.1.2",
     "isomorphic-fetch": "^2.2.1",
-    "next": "^4.1.4",
-    "node-sass": "^4.7.2",
-    "normalize.css": "^7.0.0",
+    "next": "^7.0.0",
     "postcss-easy-import": "^3.0.0",
-    "postcss-loader": "^2.0.8",
     "postcss-nested": "^2.1.2",
-    "raw-loader": "^0.5.1",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-modal": "^3.1.6",
-    "sass-loader": "^6.0.6",
     "styled-jsx-plugin-postcss": "^0.1.1"
+  },
+  "devDependencies": {
+    "babel-plugin-module-resolver": "^3.0.0",
+    "babel-plugin-wrap-in-js": "^1.1.1"
   },
   "postcss": {
     "plugins": {
